plugins {
    id 'application'
    id 'java'
    id 'checkstyle'
    id 'jacoco'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id 'org.springframework.boot' version '2.3.11.RELEASE'
    id 'org.owasp.dependencycheck' version '6.2.2'
    id 'com.github.ben-manes.versions' version '0.39.0'
    id 'org.sonarqube' version '3.3'
    id 'au.com.dius.pact' version '4.2.9'
    id 'io.freefair.lombok' version '5.3.0'
}

group = 'uk.gov.hmcts.et'
version = '0.0.1'

allprojects {
    sourceCompatibility = '11.0'
    targetCompatibility = '11.0'
}

jacocoTestReport {
    executionData(test)
    reports {
        xml.required = true
        csv.required = false
        xml.destination file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.0
            }
        }
    }
}

checkstyle {
    maxWarnings = 285
    sourceSets = [project.sourceSets.main]
    toolVersion = '8.29'
}

def sonarExclusions = ['**/uk/gov/hmcts/ethos/replacement/docmosis/config/**',
                       '**/uk/gov/hmcts/ethos/replacement/docmosis/model/**',
                       '**/uk/gov/hmcts/reform/ethos/replacement/docmosis/CaseOrchestrationApplication',
                       '**/uk/gov/hmcts/ethos/replacement/docmosis.config.DevQueueClient.java'
]

sonarqube {
    properties {
        property "sonar.exclusions", sonarExclusions.join(', ')
        property "sonar.projectKey", "et-ccd-callbacks"
        property "sonar.dynamicAnalysis", "reuseReports"
        property "sonar.dependencyCheck.reportPath", "${project.buildDir}/reports/dependency-check-report.xml"
        property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
    }
}

project.tasks['sonarqube'].dependsOn jacocoTestReport

sourceSets {
    test {
        java.srcDir 'src/test/java'
    }
    functional {
        java.srcDir 'src/test/functional/java'
        resources.srcDir 'src/test/functional/resources'
        compileClasspath += main.output + test.output
        runtimeClasspath += main.output + test.output
    }
    contractTest {
        java {
            compileClasspath += main.output
            runtimeClasspath += main.output
            java.srcDir 'src/test/contractTest/java'
            resources.srcDir 'src/test/contractTest/resources'
        }
        resources.srcDir file('src/test/contractTest/resources')
    }
}

configurations {
    functionalImplementation.extendsFrom testImplementation
    functionalRuntimeOnly.extendsFrom testRuntimeOnly
    contractTestImplementation.extendsFrom testImplementation
    contractTestRuntimeOnly.extendsFrom testRuntimeOnly
}

test {
    exclude '**/*ComponentTest*'
    useJUnitPlatform()
}

task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verification') {
    testClassesDirs = sourceSets.functional.output.classesDirs
    classpath = sourceSets.functional.runtimeClasspath

    useJUnit {
        includeCategories 'uk.gov.hmcts.ethos.replacement.functional.SmokeTest'
    }
    systemProperty('VAULTNAME', System.getenv('VAULTNAME'))
}

task functional(type: Test, description: 'Runs the functional tests.', group: 'Verification') {
    testClassesDirs = sourceSets.functional.output.classesDirs
    classpath = sourceSets.functional.runtimeClasspath

    useJUnit {
        includeCategories 'uk.gov.hmcts.ethos.replacement.functional.SmokeTest'
    }

    systemProperty('VAULTNAME', System.getenv('VAULTNAME'))

    maxHeapSize = '1G'
}

project.ext {
    pacticipant = 'ethos_replDocmosisService'
    pacticipantVersion = getCheckedOutGitCommitHash()
}

def getCheckedOutGitCommitHash() {
    'git rev-parse --verify --shirt HEAD'.execute().text.trim()
}

task runContractTests(type: Test, description: 'Runs contract tests.', group: 'Verification') {
    onlyIf {
        return System.env.SKIP_CONTRACT_TESTS == null || System.env.SKIP_CONTRACT_TESTS == 'false'
    }
    useJUnitPlatform()
    testClassesDirs = sourceSets.contractTest.output.classesDirs
    classpath = sourceSets.contractTest.runtimeClasspath
    systemProperty 'pact.rootDir', "pacts"
    testLogging.showStandardStreams = true
}

task runAndPublishConsumerPactTests(type: Test, description: 'Publish pact test to broker.', group: 'Verification') {
    logger.lifecycle("Runs pact consumer Tests")

    testClassesDirs = sourceSets.contractTest.output.classesDirs
    classpath = sourceSets.contractTest.runtimeClasspath
}
rootProject.tasks.named("processContractTestResources") {
    duplicatesStrategy = 'include'
}

runAndPublishConsumerPactTests.finalizedBy pactPublish

pact {
    broker {
        pactBrokerUrl = System.getenv("PACT_BROKER_FULL_URL") ?: 'http://localhost:80'
    }
    publish {
        pactDirectory = 'pacts'
        tags = [System.getenv("PACT_BRANCH_NAME") ?: 'Dev']
        version = project.pacticipantVersion
    }
}

task fortifyScan(type: JavaExec)  {
    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
    // Specifies if the build should be failed if a CVSS score above a specified level is identified.
    // range of 0-10 fails the build, anything greater and it doesn't fail the build
    failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
    suppressionFile = 'config/owasp/suppressions.xml'
    analyzers.assemblyEnabled = false
}

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
    maven { url "https://repo.maven.apache.org/maven2" }
    maven { url 'https://repo.spring.io/libs-milestone' }
    maven { url "https://jitpack.io" }
}

ext {
    springfoxSwagger = '2.9.2'
    reformLogging = '5.1.7'
    serenity = '2.3.31'
    pact_version = '4.1.7'
    junitJupiterVersion = '5.6.3'
    log4JVersion = '2.15.0'
}

dependencies {
    implementation 'com.github.hmcts:et-common:0.0.3'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-configuration-processor'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.retry:spring-retry'

    implementation 'org.postgresql:postgresql:42.2.23'

    implementation group: 'io.springfox', name: 'springfox-swagger2', version: springfoxSwagger
    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: springfoxSwagger
    implementation group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '9.11.3'
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    implementation group: 'org.apache.commons', name: 'commons-compress', version: '1.21'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: log4JVersion
    implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: log4JVersion
    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.48'
    implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.48'

// For pdfbox and elasticsearch CVEs
    implementation group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.24'
    implementation('org.elasticsearch:elasticsearch') {
        version {
            strictly '7.13.4'
        }
    }
    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.5.RELEASE'

    //to remove vulnerability CVE-2020-11987
    implementation group: 'org.apache.xmlgraphics', name: 'batik-svgbrowser', version: '1.14'

    implementation group: 'org.slf4j', name: 'slf4j-ext', version: '2.0.0-alpha2'
    implementation group: 'io.netty', name: 'netty-codec-http2', version: '4.1.66.Final'

    //To Remove vulnerability CVE-2021-21295
    implementation group: 'io.netty', name: 'netty-all', version: '4.1.61.Final'
    implementation group: 'io.netty', name: 'netty-codec-http', version: '4.1.61.Final'

    //To Remove vulnerability CVE-2020-11988
    implementation group: 'org.apache.xmlgraphics', name: 'xmlgraphics-commons', version: '2.6'

    implementation group: 'io.github.openfeign', name: 'feign-httpclient', version: '11.6'
    implementation group: 'io.github.openfeign', name: 'feign-core', version: '11.6'

    implementation group: 'uk.gov.hmcts.reform', name: 'document-management-client', version: '6.0.0'
    implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: reformLogging
    implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: reformLogging
    implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version:'0.1.0'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    testImplementation (group: 'org.docx4j', name: 'docx4j', version: '6.1.2') {
        exclude module: 'slf4j-log4j12'
    }
    testImplementation group: 'com.auth0', name: 'java-jwt', version: '3.18.1'
    testImplementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.1'
    testImplementation group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
    testImplementation group: 'com.warrenstrange', name: 'googleauth', version: '1.5.0'

    testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: serenity
    testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: serenity, {
        exclude module: 'jaxb-osgi'
    }
    testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: serenity
    testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: serenity

    testImplementation 'com.github.hmcts:fortify-client:1.2.1:all'

    // Contract Tests
    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'junit5', version: pact_version
    contractTestImplementation group: 'au.com.dius.pact.consumer', name: 'java8', version: pact_version
    contractTestImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.3.9.RELEASE'
    contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitJupiterVersion
    contractTestRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: junitJupiterVersion
    contractTestImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: junitJupiterVersion
    contractTestRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.7.0'
    contractTestImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.4'
    contractTestImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.4'
    contractTestImplementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.7.RELEASE'
    contractTestImplementation group: 'org.springframework.cloud', name: 'spring-cloud-netflix-ribbon', version: '2.2.7.RELEASE'

    contractTestImplementation sourceSets.main.runtimeClasspath
    contractTestImplementation sourceSets.test.runtimeClasspath
}

bootJar {
    getArchiveFileName().set(provider {
        'et-cos.jar'
    })

    manifest {
        attributes('Implementation-Version': project.version.toString())
    }
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}

